[package]
name = "tmux-lib"
version = "0.3.1"
edition = "2021"
rust-version = "1.74.0"
description = "Tmux helper functions."
readme = "README.md"

license = "MIT OR Apache-2.0"
authors = ["graelo <graelo@grael.cc>"]
repository = "https://github.com/graelo/tmux-lib"
homepage = "https://github.com/graelo/tmux-lib"
documentation = "https://docs.rs/tmux-lib"

keywords = ["tmux", "tmux-plugin"]
categories = ["command-line-utilities"]
exclude = ["/.github", "/ci", "/.travis.yml", "/appveyor.yml"]

[dependencies]
thiserror = "1"

serde = { version = "1.0", features = ["derive"] }
nom = "7"

async-std = { version = "1", features = ["unstable"] }
