[package]
name = "tmux-lib"
version = "0.5.0"
edition = "2024"
rust-version = "1.95.0"
description = "Tmux helper functions."
readme = "README.md"

documentation = "https://docs.rs/tmux-lib"
homepage = "https://github.com/graelo/tmux-lib"
repository = "https://github.com/graelo/tmux-lib"
license = "MIT OR Apache-2.0"

keywords = ["tmux", "tmux-plugin"]
categories = ["command-line-utilities"]
exclude = ["/.github", "/.travis.yml", "/appveyor.yml", "/ci"]

[dependencies]
thiserror = "2"

nom = "8"
serde = { version = "1.0", features = ["derive"] }

smol = "2"
